--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # .gitignore
 
-####= RAPTORFrame gitignore File List
-##============================================================================##
+####= RAPTORFrame Git Untracked File List
+##===========================================================================##
 
-## How to use gitignore: https://help.github.com/articles/ignoring-files
+## @how-to-use-gitignore https://help.github.com/articles/ignoring-files
 
 *.sassc
 .sass-cache/
